# MiniEval-pro

./: .gitignore  CHANGELOG.md  DESIGN.md  MANIFEST.in  README.md  benchmark_correlation.py  demo_audit.jsonl  pyproject.toml  run_dashboard.py  test_audit.csv  test_audit.jsonl  test_truthfulqa.py
dashboard/: app.py
data/: download_halueval.py  load_halueval.py
minieval_pro/: .gitignore  __init__.py  cli.py  evaluator.py
minieval_pro/database/: __init__.py  db.py  update_database.py
minieval_pro/gate/: __init__.py  gate.py
minieval_pro/persistence/: __init__.py  audit.py  report.py
minieval_pro/scorers/: __init__.py  attribution.py  faithfulness.py  relevance.py  toxicity.py
minieval_pro/tests/: __init__.py  diagnose_contradiction.py  gate_cases.py  run_faithfulness_bench.py  run_gate_bench.py  test_all.py  test_cases.py
minieval_pro/web/: app.py
minieval_pro/web/templates/: eval_detail.html  live_feed.html
