[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minieval-pro"
version = "1.0.0"
requires-python = ">=3.9"
description = "LLM Evaluation Platform - Detect hallucinations in RAG pipelines. 200x cheaper than GPT-4 judge."
authors = [{ name = "Preeti Soni", email = "sonipreeti2528@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.44.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.6",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
minieval-pro = "minieval_pro.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minieval_pro*"]
exclude = ["gritvenv*", "tests*", "dist*", "build*", "*.egg-info*"]
