[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minieval-pro"
version = "1.1.0"
requires-python = ">=3.10"
description = "The trust layer for AI memory — verify every fact before it's stored, adjudicate conflicts by evidence, keep an auditable record."
authors = [{ name = "Preeti Soni", email = "sonipreeti2528@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
keywords = ["llm", "hallucination", "ai-memory", "nli", "evaluation", "audit"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
dashboard = ["fastapi>=0.100.0", "uvicorn>=0.24.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["minieval_pro*"]
exclude = ["gritvenv*", "dashboard*", "data*", "dist*", "build*", "*.egg-info*"]